--- a/Publications.html
+++ b/Publications.html
@@ -6436,6 +6436,25 @@ function recaptchaOnload() {
 		
 <h2 style="padding-left:25px;"><strong>2025</strong></h2> 
 <ul style="list-style: none; line-height: 120%">
+				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/GIPP_ICIR_2025"/>
+						<b>GIPP: Geometry-Independent Dynamic Path Planning in Real-time using GPU</b>
+						<br/>
+						Elliot Lundin, Felix Mathiasson, and Prashant Goswami
+						<br/><i>IEEE International Conference On Intelligent Reality (ICIR), To Appear, To Appear, </i> 2025 <br/>
+						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>		
+						<a href="https://www.youtube.com/watch?v=3AMQcC_rAMQ" target="_blank">[<font color="#0547f6">Presentation</font>]</a>						
+						<br/><br/><br/><br/><br/>
+				</li>	
+				
+				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/Furniture_ICIR_2025"/>
+						<b>Space-aware Indoor Furniture Recommendation and Placement using Agentic AI</b>
+						<br/>
+						Prashant Goswami, Gaurav Rai*, Venkata Sai Abhiram Akula*, Ojaswa Sharma, Muhammad Imran
+						<br/><i>IEEE International Conference On Intelligent Reality (ICIR), To Appear, </i> 2025 <br/>
+						<a href="https://www.youtube.com/watch?v=4A8oPDydAEg" target="_blank">[<font color="#0547f6">Presentation</font>]</a>
+						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>					
+				</li>
+					
 				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/FL_HAR_2025.png"/>
 						<b>A Comparative Study of Federated Learning Methods for Human Activities Recognition in Healthcare</b>
 						<br/>
@@ -6987,7 +7006,7 @@ function recaptchaOnload() {
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<footer>
 	    <div id="footer-body" class="section">
 	    	<div class="container">
