--- a/Publications.html
+++ b/Publications.html
@@ -6442,7 +6442,7 @@ function recaptchaOnload() {
 						Elliot Lundin, Felix Mathiasson, and Prashant Goswami
 						<br/><i>IEEE International Conference On Intelligent Reality (ICIR), To Appear, To Appear, </i> 2025 <br/>
 						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>		
-						<a href="https://www.youtube.com/watch?v=3AMQcC_rAMQ" target="_blank">[<font color="#0547f6">Presentation</font>]</a>						
+						<a href="https://www.youtube.com/watch?v=3AMQcC_rAMQ" target="_blank">[<font color="#0547f6">Video</font>]</a>						
 						<br/><br/><br/><br/><br/>
 				</li>	
 				
@@ -6452,7 +6452,7 @@ function recaptchaOnload() {
 						Prashant Goswami, Gaurav Rai*, Venkata Sai Abhiram Akula*, Ojaswa Sharma, Muhammad Imran
 						<br/><i>IEEE International Conference On Intelligent Reality (ICIR), To Appear, </i> 2025 <br/>
 						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>
-						<a href="https://www.youtube.com/watch?v=4A8oPDydAEg" target="_blank">[<font color="#0547f6">Presentation</font>]</a>					
+						<a href="https://www.youtube.com/watch?v=4A8oPDydAEg" target="_blank">[<font color="#0547f6">Video</font>]</a>					
 				</li>
 					
 				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/FL_HAR_2025.png"/>
