--- a/Publications.html
+++ b/Publications.html
@@ -6436,7 +6436,7 @@ function recaptchaOnload() {
 		
 <h2 style="padding-left:25px;"><strong>2025</strong></h2> 
 <ul style="list-style: none; line-height: 120%">
-				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/GIPP_ICIR_2025"/>
+				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/GIPP_ICIR_2025.png"/>
 						<b>GIPP: Geometry-Independent Dynamic Path Planning in Real-time using GPU</b>
 						<br/>
 						Elliot Lundin, Felix Mathiasson, and Prashant Goswami
@@ -6446,7 +6446,7 @@ function recaptchaOnload() {
 						<br/><br/><br/><br/><br/>
 				</li>	
 				
-				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/Furniture_ICIR_2025"/>
+				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/Furniture_ICIR_2025.png"/>
 						<b>Space-aware Indoor Furniture Recommendation and Placement using Agentic AI</b>
 						<br/>
 						Prashant Goswami, Gaurav Rai*, Venkata Sai Abhiram Akula*, Ojaswa Sharma, Muhammad Imran
