--- a/Publications.html
+++ b/Publications.html
@@ -6439,8 +6439,8 @@ function recaptchaOnload() {
 				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/GIPP_ICIR_2025.png"/>
 						<b>GIPP: Geometry-Independent Dynamic Path Planning in Real-time using GPU</b>
 						<br/>
-						Elliot Lundin, Felix Mathiasson, and Prashant Goswami
-						<br/><i>IEEE International Conference On Intelligent Reality (ICIR), To Appear, To Appear, </i> 2025 <br/>
+						Elliot Lundin, Felix Mathiasson, Prashant Goswami
+						<br/><i>IEEE International Conference On Intelligent Reality (ICIR), To Appear, </i> 2025 <br/>
 						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>		
 						<a href="https://www.youtube.com/watch?v=3AMQcC_rAMQ" target="_blank">[<font color="#0547f6">Video</font>]</a>						
 						<br/><br/><br/><br/><br/>
