--- a/Publications.html
+++ b/Publications.html
@@ -6462,7 +6462,7 @@ function recaptchaOnload() {
 						Raghu Vamsi Vajjhula, Sadi Alawadi, Prashant Goswami, Satish Kumar Buravelli
 						<br/><i>IEEE International Conference on Blockchain Computing and Applications, (BCCA)-Special Track, To Appear, </i> 2025 <br/>
 						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>					
-						<a href="https://www.youtube.com/watch?v=d4tOvmSuUhc" target="_blank">[<font color="#0547f6">Video</font>]</a>	
+						<a href="https://www.youtube.com/watch?v=d4tOvmSuUhc" target="_blank">[<font color="#0547f6">Presentation</font>]</a>	
 						<br/><br/><br/><br/><br/>
 				</li>	
 				
