--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6282,6 +6282,8 @@ function recaptchaOnload() {
 	<li>ACM SIGSPATIAL International Conference</li>
 	<li>Eurographics Parallel Graphics and Visualization</li>
 	<li>ACM SIGGRAPH High-Performance Graphics</li>
+	<li>International Journal of Image and Graphics</li>
+	<li>Artificial Intelligence In Medicine</li>
 	<li>Signal, Image and Video Processing Journal</li>
 	<li>Cogent Education Journal</li>
 	<li>Engineering Applications of Artificial Intelligence</li>
@@ -6326,7 +6328,7 @@ function recaptchaOnload() {
 
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<footer>
 	    <div id="footer-body" class="section">
 	    	<div class="container">
