--- a/Publications.html
+++ b/Publications.html
@@ -6452,7 +6452,8 @@ function recaptchaOnload() {
 						Prashant Goswami, Gaurav Rai*, Venkata Sai Abhiram Akula*, Ojaswa Sharma, Muhammad Imran
 						<br/><i>IEEE International Conference On Intelligent Reality (ICIR), To Appear, </i> 2025 <br/>
 						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>
-						<a href="https://www.youtube.com/watch?v=4A8oPDydAEg" target="_blank">[<font color="#0547f6">Video</font>]</a>	
+						<a href="https://www.youtube.com/watch?v=4A8oPDydAEg" target="_blank">[<font color="#0547f6">Video1</font>]</a>	
+						<a href="https://www.youtube.com/watch?v=H-vZVAwso0w" target="_blank">[<font color="#0547f6">Video2</font>]</a>	
 						<br/><br/><br/><br/><br/>						
 				</li>
 					
