--- a/Publications.html
+++ b/Publications.html
@@ -6433,7 +6433,20 @@ function recaptchaOnload() {
 					<div id="el-124107" class="element text-element  "> 
 		<div class="text-content"><h3><strong>Publications</strong></h3>  <br>
 		
-		
+<h2 style="padding-left:25px;"><strong>2025</strong></h2> 
+<ul style="list-style: none; line-height: 120%">
+				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/GRIVAPP26.png"/>
+						<b>Pinch Joints: Real-time Simulation of 2D Cable Pinching</b>
+						<br/>
+						Nicolas Elvstål Ångnell, Prashant Goswami, Veronica Sundstedt, Yan Hu
+						<br/><i>The International Conference on Computer Graphics, Interaction, Visualization Theory and Applications (GRIVAPP), To Appear, </i> 2026 <br/>
+						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>		
+						<a href="https://www.youtube.com/watch?v=3AMQcC_rAMQ" target="_blank">[<font color="#0547f6">Video</font>]</a>						
+						<br/><br/><br/><br/><br/>
+				</li>		
+</ul>
+
+	
 <h2 style="padding-left:25px;"><strong>2025</strong></h2> 
 <ul style="list-style: none; line-height: 120%">
 				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/GIPP_ICIR_2025.png"/>
@@ -7010,6 +7023,7 @@ function recaptchaOnload() {
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	<br><br><br><br><br><br><br><br>
 	<footer>
 	    <div id="footer-body" class="section">
 	    	<div class="container">
