--- a/Publications.html
+++ b/Publications.html
@@ -6441,7 +6441,7 @@ function recaptchaOnload() {
 						Nicolas Elvstål Ångnell, Prashant Goswami, Veronica Sundstedt, Yan Hu
 						<br/><i>The International Conference on Computer Graphics, Interaction, Visualization Theory and Applications (GRIVAPP), To Appear, </i> 2026 <br/>
 						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>		
-						<a href="https://www.youtube.com/watch?v=3AMQcC_rAMQ" target="_blank">[<font color="#0547f6">Video</font>]</a>						
+						<a href="https://www.youtube.com/watch?v=rvAAoZP1rGs" target="_blank">[<font color="#0547f6">Video</font>]</a>						
 						<br/><br/><br/><br/><br/>
 				</li>		
 </ul>
