--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6303,6 +6303,7 @@ function recaptchaOnload() {
 <h4><strong>Ph.D. Defense Committee</strong></h4>
 
 <ul>
+	<li>Substitute Member of Grading Committee (2025), <a href="https://urn.kb.se/resolve?urn=urn:nbn:se:bth-28765" target="_blank"><u>Alexander Barlo</u></a> </li>
 	<li>Member of Grading Committee (2023), <a href="https://www.his.se/en/about-us/events/calendar/2023/disseration-bringing-game-analytics-to-indie-game-publishing--method-and-tool-support-for-indie-mobile-game-publishing/" target="_blank"><u>Yanhui Su</u></a> </li>
 	<li>Substitute Member of Grading Committee (2022), <a href="https://www.bth.se/nyheter/timn-nyheter/disputation-vinicius-ludwig-barbosa/" target="_blank"><u>Vinicius Ludwig Barbosa</u></a> </li>
 </ul>
