--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6214,15 +6214,17 @@ function recaptchaOnload() {
 <p>I am serving/have served&nbsp;in&nbsp;the international Technical Program Committee for the following conferences:</p>
 
 <ul>
+	<li>Computer Graphics Theory and Applications (GRIVAPP) 2026 (Marbella, Spain)</li>
+	<li>International Conference on Federated Learning and Intelligent Computing Systems (FLICS) 2026 (Valencia, Spain)</li>
 	<li>IEEE International Conference on Intelligent Reality (ICIR) 2025 (Boston, USA) </li> 
-	<li>International Conference on 3D Web Technology (Web3D) 2025 (Siena, Italy) </li> 
+	<li>International Conference on 3D Web Technology (ACM Web3D) 2025 (Siena, Italy) </li> 
 	<li>IEEE CTSoc Gaming, Entertainment and Media (IEEE GEM) 2025 (Kaohsiung, Taiwan)</li>
 	<li>Computer Graphics Theory and Applications (GRAPP) 2025 (Porto, Portugal)</li>
 	<li>International Conference on Digital Image Processing and Vision (ICDIPV) 2025 (Copenhagen, Denmark)</li>
 	<li>International Conference on Fog and Mobile Edge Computing (FMEC) 2025 (Tampa, USA)</li>
 	<li>International Conference on Web Information Systems and Technologies (WEBIST) 2025 (Marbella, Spain)</li> 	
 	<li>Applications and Systems of Visual Paradigms (VISUAL, IARIA) 2025 (Lisbon, Portugal)</li>
-	<li>International Conference on 3D Web Technology (Web3D) 2024 (Guimarães, Portugal) </li> 
+	<li>International Conference on 3D Web Technology (ACM Web3D) 2024 (Guimarães, Portugal) </li> 
 	<li>International Conference on Fog and Mobile Edge Computing (FMEC): 2024 (Malmö, Sweden)</li>
 	<li>Computer Graphics Theory and Applications (GRAPP) 2024 (Rome, Italy)</li>
 	<li>IEEE CTSoc Gaming, Entertainment and Media (IEEE GEM) 2024 (Torino, Italy)</li>
@@ -6249,7 +6251,8 @@ function recaptchaOnload() {
 
 <p>Other conference responsibilities:</p>
 <ul>
-<li>Served as one of the Workshop Chairs for International Conference on Fog and Mobile Edge Computing (FMEC 2024)</li>
+<il>Serving as a Program Chair for International Conference on Human-AI Interaction and Experience Design (IEEE HAXD) 2026 (Valencia, Spain)</il>
+<li>Served as one of the Workshop Chairs for International Conference on Fog and Mobile Edge Computing (FMEC) 2024 (Malmö, Sweden)</li>
 </ul>
 
 <p>&nbsp;</p>
