--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6251,7 +6251,7 @@ function recaptchaOnload() {
 
 <p>Other conference responsibilities:</p>
 <ul>
-<il>Serving as a Program Chair for International Conference on Human-AI Interaction and Experience Design (IEEE HAXD) 2026 (Valencia, Spain)</li>
+<li>Serving as a Program Chair for International Conference on Human-AI Interaction and Experience Design (IEEE HAXD) 2026 (Valencia, Spain)</li>
 <li>Served as one of the Workshop Chairs for International Conference on Fog and Mobile Edge Computing (FMEC) 2024 (Malmö, Sweden)</li>
 </ul>
 
