--- a/Publications.html
+++ b/Publications.html
@@ -6449,11 +6449,20 @@ function recaptchaOnload() {
 	
 <h2 style="padding-left:25px;"><strong>2025</strong></h2> 
 <ul style="list-style: none; line-height: 120%">
+				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/ICAT25.png"/>
+						<b>Perception of Visual Realism and Acuity in Real vs. Immersive Virtual Reality Scenes</b>
+						<br/>
+						Nan Huang, Yan Hu, Veronica Sundstedt, Prashant Goswami, Muhammad Imran, Anders Lundgren
+						<br/><i>Poster, International Conference on Artificial Reality and Telexistence & Eurographics Symposium on Virtual Environments (ICAT-EGVE), </i> 2025 <br/>
+						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>								
+						<br/><br/><br/><br/><br/>
+				</li>
+				
 				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/GIPP_ICIR_2025.png"/>
 						<b>GIPP: Geometry-Independent Dynamic Path Planning in Real-time using GPU</b>
 						<br/>
 						Elliot Lundin, Felix Mathiasson, Prashant Goswami
-						<br/><i>IEEE International Conference On Intelligent Reality (ICIR), To Appear, </i> 2025 <br/>
+						<br/><i>IEEE International Conference On Intelligent Reality (ICIR), </i> 2025 <br/>
 						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>		
 						<a href="https://www.youtube.com/watch?v=3AMQcC_rAMQ" target="_blank">[<font color="#0547f6">Video</font>]</a>						
 						<br/><br/><br/><br/><br/>
@@ -6463,7 +6472,7 @@ function recaptchaOnload() {
 						<b>Space-aware Indoor Furniture Recommendation and Placement using Agentic AI</b>
 						<br/>
 						Prashant Goswami, Gaurav Rai*, Venkata Sai Abhiram Akula*, Ojaswa Sharma, Muhammad Imran
-						<br/><i>IEEE International Conference On Intelligent Reality (ICIR), To Appear, </i> 2025 <br/>
+						<br/><i>IEEE International Conference On Intelligent Reality (ICIR), </i> 2025 <br/>
 						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<a href="https://www.youtube.com/watch?v=4A8oPDydAEg" target="_blank">[<font color="#0547f6">Video1</font>]</a>	
 						<a href="https://www.youtube.com/watch?v=H-vZVAwso0w" target="_blank">[<font color="#0547f6">Video2</font>]</a>	
