--- a/Publications.html
+++ b/Publications.html
@@ -6501,7 +6501,7 @@ function recaptchaOnload() {
 						<b>Identifying Abnormalities in Heart Sound Data Using Machine Learning with Interpretability</b>
 						<br/>
 						Surya Pothuri, Lakhan Kumar Sundur Purushotham, Prashant Goswami, Santosh Jagtap, Jayant Karve
-						<br/><i>Future Technologies Conference (FTC), To Appear, </i> 2025 <br/>
+						<br/><i>Book Chapter, Springer,  Lecture Notes in Networks and Systems, Volume 4 <font color="IndianRed"><strong>Book chapter</strong></font>, Proceedings of the Future Technologies Conference (FTC), pp.489-507,</i> 2025 <br/>
 						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>		
 						<a href="https://www.youtube.com/watch?v=j13uSkVED5I" target="_blank">[<font color="#0547f6">Presentation</font>]</a>								
 						<br/><br/><br/><br/><br/>
