--- a/Publications.html
+++ b/Publications.html
@@ -6501,7 +6501,7 @@ function recaptchaOnload() {
 						<b>Identifying Abnormalities in Heart Sound Data Using Machine Learning with Interpretability</b>
 						<br/>
 						Surya Pothuri, Lakhan Kumar Sundur Purushotham, Prashant Goswami, Santosh Jagtap, Jayant Karve
-						<br/><i>Book Chapter, Springer,  Lecture Notes in Networks and Systems, Volume 4 <font color="IndianRed"><strong>Book chapter</strong></font>, Proceedings of the Future Technologies Conference (FTC), pp.489-507,</i> 2025 <br/>
+						<br/><i>Lecture Notes in Networks and Systems, Volume 4, Springer, <font color="IndianRed"><strong>Book chapter</strong></font>, Proceedings of the Future Technologies Conference (FTC), pp.489-507,</i> 2025 <br/>
 						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>		
 						<a href="https://www.youtube.com/watch?v=j13uSkVED5I" target="_blank">[<font color="#0547f6">Presentation</font>]</a>								
 						<br/><br/><br/><br/><br/>
@@ -6620,7 +6620,7 @@ function recaptchaOnload() {
 						<b>Design of Artificial Intelligence-based products: Barriers and Enablers</b>
 						<br/>
 						 Santosh Jagtap, Prashant Goswami 
-						<br/><i>Book Chapter, Springer, Design in the Era of Industry 4.0, Vol. 3, <font color="IndianRed"><strong>Book chapter</strong></font>, Proceedings of the 9th International Conference on Research Into Design (iCord'23), pp.647-658,</i> 2023 <br/>
+						<br/><i>Design in the Era of Industry 4.0, Vol. 3, Springer,  <font color="IndianRed"><strong>Book chapter</strong></font>, Proceedings of the 9th International Conference on Research Into Design (iCord'23), pp.647-658,</i> 2023 <br/>
 						<a href="https://www.researchgate.net/profile/Santosh-Jagtap-3/publication/372610533_Design_of_Artificial_Intelligence-Based_Products_Barriers_and_Enablers/links/64cb18a140a524707b8e3334/Design-of-Artificial-Intelligence-Based-Products-Barriers-and-Enablers.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						
 						<br/><br/><br/><br/><br/>
