--- a/index.html
+++ b/index.html
@@ -6397,6 +6397,7 @@ function recaptchaOnload() {
 <!--		</div>   --!>
 		<div id="el-124102" class="element text-element  "> 
 		<div class="text-content"><ul>
+	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">July 2025: I am a Program Chair for IEEE Conference on Human-AI Interaction and Experience Design<a href="https://intelligent-systems.net/haxd2026/" target="_blank"><u>(IEEE HAXD 2026)</u></a> and also organizing a Workshop on Human-AI Interaction on Mobile Devices there.</span></li>
 	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">Sep 2025: Two full papers accepted at IEEE International Conference on Intelligent Realities (ICIR), Boston 2025</span></li>	
 	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">July 2025: I am a Guest Editor for our special issue in the &nbsp;<a href="https://www.mdpi.com/journal/jimaging/special_issues/F78Q27VD57" target="_blank"><u>Journal of Imaging(MDPI)</u></a> on "Beyond Reality: Advancements in Computer Graphics for Immersive Metaverse Experiences"</span></li>
 	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">Feb 2025: I have been promoted to the Biträdande Professor position!</span></li>
