--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6214,6 +6214,8 @@ function recaptchaOnload() {
 <p>I am serving/have served&nbsp;in&nbsp;the international Technical Program Committee for the following conferences:</p>
 
 <ul>
+	<li>International Conference on Imaging (IOCIM)  2026 (online)</li>
+	<li>IEEE Conference on Human-AI Interaction and Experience Design (IEEE HAXD) 2026 (Valencia, Spain)</li>
 	<li>Computer Graphics Theory and Applications (GRIVAPP) 2026 (Marbella, Spain)</li>
 	<li>International Conference on Federated Learning and Intelligent Computing Systems (FLICS) 2026 (Valencia, Spain)</li>
 	<li>IEEE International Conference on Intelligent Reality (ICIR) 2025 (Boston, USA) </li> 
@@ -6251,7 +6253,8 @@ function recaptchaOnload() {
 
 <p>Other conference responsibilities:</p>
 <ul>
-<li>Serving as a Program Chair for International Conference on Human-AI Interaction and Experience Design (IEEE HAXD) 2026 (Valencia, Spain)</li>
+<li>Serving as a Program Chair for International Conference on Human-AI Interaction and Experience Design <a href="https://intelligent-systems.net/haxd2026/" target="_blank"><u>(IEEE HAXD)</u></a>2026 (Valencia, Spain)</li>
+<li>Serving as a General Chair for an IEEE HAXD Workshop on Human-AI Interaction on Mobile Devices <a href="https://hamiworkshop.github.io/" target="_blank"><u>(IEEE HAMI)</u></a> 2026 (Valencia, Spain)</li>
 <li>Served as one of the Workshop Chairs for International Conference on Fog and Mobile Edge Computing (FMEC) 2024 (Malmö, Sweden)</li>
 </ul>
 
@@ -6333,6 +6336,7 @@ function recaptchaOnload() {
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br>
 	<footer>
 	    <div id="footer-body" class="section">
 	    	<div class="container">
