--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6267,6 +6267,7 @@ function recaptchaOnload() {
 	<li>IEEE Transactions on Visualization and Computer Graphics Journal</li>
 	<li>IEEE Visualization</li>
 	<li>Computer Graphics Forum Journal</li>
+	<li>ACM Journal on Computing and Cultural Heritage</li>
 	<li>ACM Transactions on Applied Perception Journal</li>
 	<li>Computers and Graphics Journal</li>
 	<li>Computer Graphics International</li>
