--- a/index.html
+++ b/index.html
@@ -6419,7 +6419,7 @@ function recaptchaOnload() {
 		</div><div id="el-124103" class="element text-element  "> 
 		<div class="text-content"></div>
 		</div><div id="el-64218" class="element text-element  "> 
-		<div class="text-content paragraph2 "><p class="paragraph2" data-angle="0" data-canvas-width="574.7424" data-font-name="g_font_2" style="text-align: justify;">Dr. Prashant Goswami is an Associate Professor (Biträdande Professor)
+		<div class="text-content paragraph2 "><p class="paragraph2" data-angle="0" data-canvas-width="574.7424" data-font-name="g_font_2" style="text-align: justify;">Dr. Prashant Goswami is a Senior Associate Professor (Biträdande Professor)
 		 in the&nbsp;<a href="https://www.bth.se/om-bth/organisation/fakulteten-for-datavetenskaper/dida/" target="_blank"><u>Department of Computer Science (DIDA)</u></a>, falling under 
 		the&nbsp;<a href="https://www.bth.se/eng/about-bth/organisation/faculty-of-computing/" target="_blank"><u>Faculty of Computing</u></a>&nbsp; at&nbsp;<a href="https://www.bth.se/" target="_blank"><u>BTH (Blekinge Institute of Technology)</u></a>. 
 		He started here as an Assistant Professor (Universitetslektor) in November 2014 and became Associate Professor after obtaining the Docent title in 2021. He obtained his B. Tech and M. Tech (dual degree) in&nbsp;<a href="http://www.cse.iitd.ernet.in/" target="_blank"><u>Computer Science and Engineering</u></a>&nbsp;from the Indian Institute of Technology (IIT), New Delhi in (2000-)2005. 
@@ -6429,7 +6429,7 @@ function recaptchaOnload() {
 </div>
 		</div><div id="el-64209" class="element text-element  "> 
 <!--<div class="text-content hasFontScale" data-fontscale="0.9"><p style="margin-bottom:0;"><span class="fontSize" style="font-size: 18px; line-height: 1;"><strong>Associate Professor </strong></span><span class="fontSize" style="color:#9900FF" style="font-size: 14px; line-height: 85%;">(Biträdande Professor, Ph.D., Docent)</span></p>-->
-<div class="text-content hasFontScale" data-fontscale="0.9"><p style="margin-bottom:0;"><span class="fontSize" style="font-size: 16px; line-height: 1;"><strong>Associate Professor, Ph.D. </strong></p>
+<div class="text-content hasFontScale" data-fontscale="0.9"><p style="margin-bottom:0;"><span class="fontSize" style="font-size: 16px; line-height: 1;"><strong>Senior Associate Professor, Ph.D. </strong></p>
 <p style="margin-bottom:0;"><span class="fontSize" style="color:#3352ff" style="font-size: 14px; line-height: 85%;">(Biträdande Professor, Docent)</span></p>
 <p style="margin-bottom:0;"><span class="fontSize" style="font-size: 14px; line-height: 85%;">Department of Computer Science (DIDA)</span></p>
 <p style="margin-bottom:0;"><span class="fontSize" style="font-size: 14px; line-height: 85%;"><strong>Blekinge Institute of Technology (BTH) </strong></span></p>
