--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6214,6 +6214,7 @@ function recaptchaOnload() {
 <p>I am serving/have served&nbsp;in&nbsp;the international Technical Program Committee for the following conferences:</p>
 
 <ul>
+	<li>IEEE International Conference on Intelligent Reality (ICIR) 2026 (Pisa, Italy) </li> 
 	<li>International Conference on Imaging (IOCIM)  2026 (online)</li>
 	<li>IEEE Conference on Human-AI Interaction and Experience Design (IEEE HAXD) 2026 (Valencia, Spain)</li>
 	<li>Computer Graphics Theory and Applications (GRIVAPP) 2026 (Marbella, Spain)</li>
@@ -6337,7 +6338,7 @@ function recaptchaOnload() {
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br>
 	<footer>
 	    <div id="footer-body" class="section">
 	    	<div class="container">
