--- a/People.html
+++ b/People.html
@@ -6260,14 +6260,16 @@ function recaptchaOnload() {
 
 
 <h5><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;style=color: rgb(100, 134, 255);">Civilingenjör/Master theses Supervisions:</span></h5> 
-<p><u>Current (2025):</u></p> 
+<p><u>Current (2026):</u></p> 
 <ul> 
+ <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Alex Olsson &amp; Haissam Mourad </font></font></li>
+ <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Karl Fahlstedt</font></font></li>
  <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Oscar Milstein </font></font></li>
- <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Rasmus Petersson &amp; Pontus Östryd </font></font></li>
 </ul> 
 <p>&nbsp;</p> 
 <p><u>Previous:</u></p> 
 <ul>
+<li>Rasmus Petersson &amp; Pontus Östryd (2025)<br> <em>Tetrahedron-Based XPBD Collision and Performance Analysis for Real-Time Soft Body Deformation</em>&nbsp;[<span class="fgColor" style="color:#0026f8;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot}" href="https://bth.diva-portal.org/smash/get/diva2:2007496/FULLTEXT01.pdf" target="_blank">PDF</a></span>] [<a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot}" href="https://urn.kb.se/resolve?urn=urn:nbn:se:bth-28719" target="_blank"><span class="fgColor" style="color:#0025f6;">Project</span></a>]</li>
 <li>Nicolas Elvstål Ångnell  (2025)<br> <em>Real-time Simulation of 2D Cable Joints with Pinched and Sliding Joints using Velocity Constraints</em>&nbsp;[<span class="fgColor" style="color:#0026f8;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot}" href="https://bth.diva-portal.org/smash/get/diva2:1957835/FULLTEXT01.pdf" target="_blank">PDF</a></span>] [<a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot}" href="https://urn.kb.se/resolve?urn=urn:nbn:se:bth-27842" target="_blank"><span class="fgColor" style="color:#0025f6;">Project</span></a>]</li>
  <li>Elliot Lundin &amp; Felix Matthiasson  (2024)<br> <em>GIPP: GPU-based Path Planning and Navigation Mesh Generation: A Novel Automatic Navigation Mesh Generator and Path Planning Algorithm using the Rendering Pipeline</em>&nbsp;[<span class="fgColor" style="color:#0026f8;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot}" href="https://bth.diva-portal.org/smash/get/diva2:1866804/FULLTEXT01.pdf" target="_blank">PDF</a></span>] [<a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot}" href="https://urn.kb.se/resolve?urn=urn:nbn:se:bth-26241" target="_blank"><span class="fgColor" style="color:#0025f6;">Project</span></a>]</li>
  <li>Herman Larsson @ Epiroc  (2024)<br> <em>Accelerated LiDAR and RADAR sensor simulation for autonomous vehicles in mining environments</em>&nbsp;[<span class="fgColor" style="color:#0026f8;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot}" href="https://bth.diva-portal.org/smash/get/diva2:1875146/FULLTEXT02.pdf" target="_blank">PDF</a></span>] [<a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot}" href="https://bth.diva-portal.org/smash/record.jsf?pid=diva2:1875146" target="_blank"><span class="fgColor" style="color:#0025f6;">Project</span></a>]</li>
@@ -6321,7 +6323,14 @@ function recaptchaOnload() {
 <p><u>Current (2025):</u></p> 
 <ul> 
 
-<!-- <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Raghu Vamsi Vajjhula &amp; Satish kumar Buravelli (co-supervised with Sadi Alawadi)</font></font></li> -->
+<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Nikhil Souri Yalamati &amp; Sai Harshitha Adari (co-supervised with Rajkumar Saini, Luleå Tekniska Universitet)</font></font></li>
+<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Bhagya Harini Padavala &amp; Sri Harshita Velugubantla (co-supervised with Amir Yavariabdi)</font></font></li>
+<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Swaroop Raparthi  &amp; Yasoda Kishore Allu (@HealthyGaming)</font></font></li>
+<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Vidya Sinha  &amp;  Venkata Balaji Anupoju (@Vera Energy)</font></font></li>
+<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Tarun Boddeda(co-supervised with Sadi Alawadi)</font></font></li>
+<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Chandra Venkata Sai Sarika &amp; Murli Mohan Sarika (co-supervised with Jaya Sreevalsan-Nair, IIIT Bangalore)</font></font></li>
+
+
 
 
 
@@ -6392,7 +6401,7 @@ function recaptchaOnload() {
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-	<br><br><br><br><br><br><br>
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<footer>
 	    <div id="footer-body" class="section">
 	    	<div class="container">
