--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6219,7 +6219,7 @@ function recaptchaOnload() {
 	<li>International Conference on Imaging (IOCIM)  2026 (online)</li>
 	<li>IEEE Conference on Human-AI Interaction and Experience Design (IEEE HAXD) 2026 (Valencia, Spain)</li>
 	<li>Computer Graphics Theory and Applications (GRIVAPP) 2026 (Marbella, Spain)</li>
-	<li>International Conference on Federated Learning and Intelligent Computing Systems (FLICS) 2026 (Valencia, Spain)</li>
+<!--	<li>International Conference on Federated Learning and Intelligent Computing Systems (FLICS) 2026 (Valencia, Spain)</li> -->
 	<li>IEEE International Conference on Intelligent Reality (ICIR) 2025 (Boston, USA) </li> 
 	<li>International Conference on 3D Web Technology (ACM Web3D) 2025 (Siena, Italy) </li> 
 	<li>IEEE CTSoc Gaming, Entertainment and Media (IEEE GEM) 2025 (Kaohsiung, Taiwan)</li>
