--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6214,6 +6214,7 @@ function recaptchaOnload() {
 <p>I am serving/have served&nbsp;in&nbsp;the international Technical Program Committee for the following conferences:</p>
 
 <ul>
+	<li>High Performance Graphics 2026 (Los Angeles, USA)</li>
 	<li>IEEE CTSoc Gaming, Entertainment and Media (IEEE GEM) 2026 (Kaohsiung, Taiwan)</li>
 	<li>IEEE International Conference on Intelligent Reality (ICIR) 2026 (Pisa, Italy) </li> 
 	<li>International Conference on Imaging (IOCIM)  2026 (online)</li>
@@ -6339,7 +6340,7 @@ function recaptchaOnload() {
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<footer>
 	    <div id="footer-body" class="section">
 	    	<div class="container">
